--- a/Pages/pro.html
+++ b/Pages/pro.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords"
+        content="Elaisa, Inicio, tienda de ropa, ropa, prendas, remeras, Remera Simple, Remera con estampado pequeño, Remera con estampado grande, remera, talles, precios">
+    <meta name="description"
+        content="Nuestra variedad de productos va cambiando de temporada a temporada asi que apurate para aprovecharlo">
     <!--css y BT-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
@@ -81,8 +85,10 @@
         <footer class="footer">
             <p class="footer__subt">Seguinos en nuestras redes</p>
             <div>
-                <img src="../img/logo-face.png" alt="logo de facebook">
-                <img src="../img/logo-insta.png" alt="logo de instagram">
+                <a href="https://es-la.facebook.com" Target="_blank"><img src="../img/logo-face.png"
+                        alt="logo de facebook"></a>
+                <a href="https://www.instagram.com" Target="_blank"><img src="../img/logo-insta.png"
+                        alt="logo de instagram"></a>
             </div>
             <p>Todos los derechos reservados</p>
         </footer>
