--- a/Pages/sed.html
+++ b/Pages/sed.html
@@ -22,7 +22,7 @@
             <nav class="navbar navbar-expand-sm ">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="../index.html"><img src="../img/ELaisa-removebg-preview (2).png"
-                            alt="Logo de la Marca Elaisa" style="width:100%; height: 4rem; margin-left: 10px;"></a>
+                            alt="Logo de la Marca Elaisa"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
