--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Elaisa, Inicio, tienda de ropa, ropa, prendas, remeras">
     <meta name="description"
-        content="Elaisa es una marca distinta a las demas ya que te ofrece calidad y comfort a la vez a un precio accesible">
+        content="Elaisa es una marca distinta a las demas ya que te ofrece calidad y confort a la vez a un precio accesible">
     <!--css y BT-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <title>Pagina de Inicio</title>
+    <title>Elaisa tienda de ropa</title>
 </head>
 
 <body>
@@ -55,25 +55,62 @@
             <section class="mainindex__sec2">
                 <img src="img/ELaisa-removebg-preview (2).png" alt="Logo de la Marca Elaisa"
                     class="mainindex__sec2__logo">
+                <p>CALIDAD Y CONFORT A LA DISPOSICION DEL CLIENTE</p>
             </section>
             <section class="mainindex__sec3">
-                <div class="mainindex__sec3__div1">
+                <h1 id="h1">Nuestras ofertas de temporada</h1>
+                <div class="mainindex__sec3__contenedorpro">
+                    <div class="mainindex__sec3__contenedorpro__hijo">
+                        <img src="img/20201005_102315-011-d3f2f4f3fdb63064dd16019077095110-1024-1024.png"
+                            alt="foto de remera simple">
+                        <h2>Remera simple</h2>
+                        <p><span class="s1">20$</span> <span>15$</span></p>
+                        <h3>Talles</h3>
+                        <span>S</span>
+                        <span>M</span>
+                        <span>L</span>
+                    </div>
+                    <div class="mainindex__sec3__contenedorpro__hijo">
+                        <img src="img/D_NQ_NP_799976-MLU45233593360_032021-O.png"
+                            alt="foto de remera con estampado pequeño">
+                        <h2>Remera con estampado pequeño</h2>
+                        <p><span class="s1">30$</span> <span>20$</span></p>
+                        <h3>Talles</h3>
+                        <span>S</span>
+                        <span>M</span>
+                        <span>L</span>
+                    </div>
+                    <div class="mainindex__sec3__contenedorpro__hijo">
+                        <img src="img/TX04.png" alt="foto de remera con estampado grande">
+                        <h2>Remera con estampado grande</h2>
+                        <p><span class="s1">15$</span> <span>8$</span></p>
+                        <h3>Talles</h3>
+                        <span>S</span>
+                        <span>M</span>
+                        <span>L</span>
+                    </div>
+                </div>
+                <div class="mainindex__sec3__boton"><button><a href="pages/pro.html">MÁS PRODUCTOS</a></button></div>
+            </section>
+            <section class="mainindex__sec4">
+                <h2 id="h1">Donde encontrarnos</h2>
+                <div class="mainindex__sec4__div1">
                     <img src="img/maxresdefault.jpg" alt="sede de Cipolletti">
-                    <h1 id="h1">Sede de Cipolletti</h1>
+                    <h3 id="h2">Sede de Cipolletti</h3>
                     <p>
                         Lugar donde se fundo Elaisa y se crearon la primeras prendas de ropa que lograron cautivar al
                         mundo.
                     </p>
                 </div>
-                <div class="mainindex__sec3__div2"><img src="img/Gap-tiendas-825x464 (1).jpg" alt="sede de Allen">
-                    <h1 id="h1">Sede de Allen</h1>
+                <div class="mainindex__sec4__div2"><img src="img/Gap-tiendas-825x464 (1).jpg" alt="sede de Allen">
+                    <h3 id="h2">Sede de Allen</h3>
                     <p>
                         Segundo local que se creo con la intencion de aumentar la extension de la marca y tener mas
                         empleados.
                     </p>
                 </div>
-                <div class="mainindex__sec3__div3"><img src="img/Esprit sede interior 728.jpg" alt="sede de roca">
-                    <h1 id="h1">Sede de Roca</h1>
+                <div class="mainindex__sec4__div3"><img src="img/Esprit sede interior 728.jpg" alt="sede de roca">
+                    <h3 id="h2">Sede de Roca</h3>
                     <p>
                         Nuestra mas nueva sucursal que abro este año que desde entonces ha sido un rotundo exito.
                     </p>
