--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <meta name="keywords" content="Elaisa, Inicio, tienda de ropa, ropa, prendas, remeras">
     <meta name="description"
         content="Elaisa es una marca distinta a las demas ya que te ofrece calidad y confort a la vez a un precio accesible">
-    <!--css y BT-->
+    <!--css, BT y animaciones-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Elaisa tienda de ropa</title>
 </head>
 
@@ -48,8 +49,8 @@
         </header>
         <main class="mainindex">
             <section class="mainindex__sec1">
-                <video src="video/[FREE DRONE FOOTAGE] Sea 002 _ 4K 24fps.mp4" autoplay loop muted
-                    class="mainindex__sec1__video" alt="video de un ocenao">
+                <video src="video/[FREE DRONE FOOTAGE] Sea 002 _ 4K 24fps.gif" autoplay loop muted
+                    class="mainindex__sec1__video" alt="video de un oceanao">
                 </video>
             </section>
             <section class="mainindex__sec2">
@@ -57,8 +58,8 @@
                     class="mainindex__sec2__logo">
                 <p>CALIDAD Y CONFORT A LA DISPOSICION DEL CLIENTE</p>
             </section>
-            <section class="mainindex__sec3">
-                <h1 id="h1">Nuestras ofertas de temporada</h1>
+            <section class="mainindex__sec3" data-aos="fade-up">
+                <h1>Ofertas de temporada</h1>
                 <div class="mainindex__sec3__contenedorpro">
                     <div class="mainindex__sec3__contenedorpro__hijo">
                         <img src="img/20201005_102315-011-d3f2f4f3fdb63064dd16019077095110-1024-1024.png"
@@ -92,30 +93,39 @@
                 </div>
                 <div class="mainindex__sec3__boton"><button><a href="pages/pro.html">MÁS PRODUCTOS</a></button></div>
             </section>
+            <hr>
             <section class="mainindex__sec4">
                 <h2 id="h1">Donde encontrarnos</h2>
-                <div class="mainindex__sec4__div1">
+                <div class="mainindex__sec4__div1" data-aos="fade-right" data-aos-offset="300"
+                    data-aos-easing="ease-in-sine">
                     <img src="img/maxresdefault.jpg" alt="sede de Cipolletti">
                     <h3 id="h2">Sede de Cipolletti</h3>
                     <p>
                         Lugar donde se fundo Elaisa y se crearon la primeras prendas de ropa que lograron cautivar al
                         mundo.
                     </p>
+                    <div></div>
                 </div>
-                <div class="mainindex__sec4__div2"><img src="img/Gap-tiendas-825x464 (1).jpg" alt="sede de Allen">
+                <div class="mainindex__sec4__div2" data-aos="fade-left" data-aos-offset="300"
+                    data-aos-easing="ease-in-sine">
+                    <img src="img/Gap-tiendas-825x464 (1).jpg" alt="sede de Allen">
                     <h3 id="h2">Sede de Allen</h3>
                     <p>
                         Segundo local que se creo con la intencion de aumentar la extension de la marca y tener mas
                         empleados.
                     </p>
+                    <div></div>
                 </div>
-                <div class="mainindex__sec4__div3"><img src="img/Esprit sede interior 728.jpg" alt="sede de roca">
+                <div class="mainindex__sec4__div3" data-aos="fade-right" data-aos-offset="300"
+                    data-aos-easing="ease-in-sine">
+                    <img src="img/Esprit sede interior 728.jpg" alt="sede de roca">
                     <h3 id="h2">Sede de Roca</h3>
                     <p>
                         Nuestra mas nueva sucursal que abro este año que desde entonces ha sido un rotundo exito.
                     </p>
+                    <div></div>
                 </div>
-
+                <div class="mainindex__sec4__boton"><button><a href="pages/contact.html">CONTACTANOS</a></button></div>
             </section>
         </main>
         <footer class="footer">
@@ -132,6 +142,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
         crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+        crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
