--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <div class="body">
         <header>
-            <nav class="navbar navbar-expand-sm">
+            <nav class="navbar navbar-expand-sm nav1">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="../index.html"><img src="img/ELaisa-removebg-preview (2).png"
                             alt="Logo de la Marca Elaisa" class="d-md-none d-sm-inline logo"></a>
