--- a/pages/nos.html
+++ b/pages/nos.html
@@ -21,17 +21,16 @@
     <div class="body">
         <header>
             <header>
-                <nav class="navbar navbar-expand-sm ">
+                <nav class="navbar navbar-expand-sm nav1">
                     <div class="container-fluid">
                         <a class="navbar-brand" href="../index.html"><img src="../img/ELaisa-removebg-preview (2).png"
-                                alt="Logo de la Marca Elaisa"></a>
-                        <button class="navbar-toggler boton" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                            aria-expanded="false" aria-label="Toggle navigation">
+                            alt="Logo de la Marca Elaisa"></a>
+                                <button class="btn-primary boton" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"
+                    aria-controls="offcanvasRight"><img src="../img/nav-icon.png" alt="icono nav"></button>
                         </button>
                         <div class="collapse navbar-collapse d-md-flex justify-content-md-center"
                             id="navbarSupportedContent">
-                            <ul class="navbar-nav">
+                            <ul class="navbar-nav desk">
                                 <li class="nav-item">
                                     <a class="nav-link" id="a" href="pro.html">Productos</a>
                                 </li>
@@ -47,6 +46,30 @@
                             </ul>
                         </div>
                     </div>
+                </nav>
+                <nav>
+                    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight"
+                    aria-labelledby="offcanvasRightLabel">
+                    <div class="offcanvas-header buscbot d-flex justify-content-end">
+                        <button type="button" class="btn-close text-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body buscbot">
+                            <ul class="navbar-nav buscbot__phone">
+                                <li class="nav-item">
+                                    <a class="nav-link" id="a" href="pro.html"><img src="../img/clothes.png" alt="icono de ropa"> Productos</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" id="a" href="proy.html"><img src="../img/rocket.png" alt="icono de proyectos">Proyectos</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" id="a" href="nos.html"><img src="../img/about-us-22.png" alt="icono de nosotros">Nosotros</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" id="a" href="contact.html"><img src="../img/people.png" alt="icono de contacto">Contacto</a>
+                                </li>
+                            </ul>
+                    </div>
+                </div>
                 </nav>
             </header>
             <main class="contenedornos">
